<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imie"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/imie_auto_fill"
        android:hint="@string/imie_edit_hint"
        android:inputType="text"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameLabel"
        app:layout_constraintTop_toTopOf="@+id/firstNameLabel" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwisko"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/nazwisko_auto_fill"
        android:hint="@string/nazwisko_edit_hint"
        android:inputType="text"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/lastNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lastNameLabel"
        app:layout_constraintTop_toTopOf="@+id/lastNameLabel" />

    <TextView
        android:id="@+id/gradesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liczba_ocen"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/gradesEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="5"
        android:hint="@string/liczba_ocen_edit_hint"
        android:inputType="number"
        android:textColorHint="#546E7A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/gradesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/gradesLabel"
        app:layout_constraintTop_toTopOf="@+id/gradesLabel" />

    <Button
        android:id="@+id/gradesButton"
        android:layout_width="208dp"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:text="@string/oceny"
        app:layout_constraintTop_toBottomOf="@+id/gradesEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
